# github.io

./: CITATION.cff  LICENSE  README.md  base.css  dataset.js  index.html  populate_metrics.py  pyproject.toml
figures/: ai_overall_comparison_with_position.txt  combinatorics_difficulty.txt  discrimination_power.txt  extreme_problems.txt  gpt5pro_deepthink_comparison.txt  position_analysis.txt
imo2000p4/: answer.txt  grade.txt  index.html  problem-leakage-gpt5pro.txt  problem-prefix.txt  problem-suffix-prediction-gpt5pro.txt  problem-suffix.txt  problem.txt  proof-deepthink.txt  proof-gpt5pro.txt  proof-nlzs.txt  proof-shortlist.txt  proof.txt  results.json  simulation.py
imo2001p3/: grade.txt  index.html  problem-leakage-gpt5pro.txt  problem-prefix.txt  problem-suffix-prediction-gpt5pro.txt  problem-suffix.txt  proof-deepthink.txt  proof-gpt5pro.txt  proof-shortlist.txt  proof.txt  results.json  simulation.py
imo2001p4/: grade.txt  index.html  problem-leakage-gpt5pro.txt  problem-prefix.txt  problem-suffix-prediction-gpt5pro.txt  problem-suffix.txt  problem.txt  proof-deepthink.txt  proof-gpt5pro.txt  proof-nlzs.txt  proof-shortlist.txt  proof.txt  results.json  simulation.py
imo2002p1/: grade.txt  index.html  problem-leakage-gpt5pro.txt  problem-prefix.txt  problem-suffix-prediction-gpt5pro.txt  problem-suffix.txt  problem.txt  proof-gpt5pro.txt  proof-nlzs.txt  proof-shortlist.txt  proof.js  proof.lean  proof.txt  results.json  simulation.py
imo2003p1/: grade.txt  index.html  problem-leakage-gpt5pro.txt  problem-prefix.txt  problem-suffix-prediction-gpt5pro.txt  (+8 more)
(+419 files in other folders)
