[project]
name = "mathel"
version = "0.1.0"
description = "Autonomous Self-Improving AI for IMO Combinatorics - Simulations and analyses for IMO combinatorics problems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MathEL Project"}
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
mathel = "mathel.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mathel*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "W"]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
